<resources>
    <string name="app_name">MusicPlayer</string>
    <string name="welcome_to_music_player">Welcome to Music Player</string>
    <string name="the_app_needs_permission_to_access_your_device_storage_for_playing_music">The app needs permission to access your device storage for playing music</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="permissions_denied">Permissions denied.</string>
    <string name="action_grant">Grant</string>
    <string name="action_settings">Settings</string>
    <string name="permission_bluetooth_denied">Nearby devices permission denied.</string>
    <string name="permission_external_storage_denied">Permission to access external storage denied.</string>
    <string name="for_you">For you</string>
    <string name="songs">Songs</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="playlists">Playlists</string>
    <string name="genres">Genres</string>
    <string name="folders">Folders</string>
    <string name="action_search">Search</string>
    <string name="view_on_telegram">View on Telegram</string>
    <string name="access_storage">Access Storage</string>
    <string name="access_setting">Access Setting</string>
    <string name="let_start">Let\'s start</string>
    <string name="welcome">Welcome,</string>
    <string name="user_name">User Name</string>
    <string name="history">History</string>
    <string name="last_added">Last added</string>
    <string name="most_played">Most played</string>
    <string name="shuffle">Shuffle</string>
    <string name="top_artists">Top artists</string>
    <string name="empty">Empty</string>
    <string name="x_selected">%1$d selected</string>
    <string name="action_play_next">Play next</string>
    <string name="action_add_to_playing_queue">Add to playing queue</string>
    <string name="action_add_to_playlist">Add to playlist</string>
    <string name="action_share">Share</string>
    <string name="action_delete_from_device">Delete from device</string>
    <string name="select_all">Select all</string>
    <string name="action_go_to_album">Go to album</string>
    <string name="action_go_to_artist">Go to artist</string>
    <string name="action_tag_editor">Tag editor</string>
    <string name="action_details">Details</string>
    <string name="action_set_as_ringtone">Set as ringtone</string>
    <string name="action_add_to_blacklist">Add to Blacklist</string>

</resources>