<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_14sdp">

            <ImageView
                android:id="@+id/img_user_infor"
                android:layout_width="@dimen/_32sdp"
                android:layout_height="@dimen/_32sdp"
                android:src="@drawable/ic_person"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/color_primary" />

            <LinearLayout
                android:id="@+id/layout_infor_user"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/img_user_infor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_user_infor"
                app:layout_constraintTop_toTopOf="@+id/img_user_infor"
                >

                <TextView
                    android:id="@+id/txt_welcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:includeFontPadding="false"
                    android:text="@string/welcome"
                    android:textColor="@color/text_primary"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/txt_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:includeFontPadding="false"
                    android:text="@string/user_name"
                    android:textColor="@color/text_primary"
                    android:textSize="@dimen/_14ssp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_history"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="start|center_vertical"
                android:padding="@dimen/_8sdp"
                android:background="@drawable/bg_button_secondary"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                app:layout_constraintTop_toBottomOf="@+id/layout_infor_user"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_last_added"
                >
                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_history"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/white" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:includeFontPadding="false"
                    android:text="@string/history"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp"
                    android:layout_marginStart="@dimen/_4sdp"
                    />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/btn_last_added"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="start|center_vertical"
                android:padding="@dimen/_8sdp"
                android:background="@drawable/bg_button_secondary"
                android:layout_marginStart="@dimen/_5sdp"
                app:layout_constraintTop_toTopOf="@+id/btn_history"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/btn_history"
                app:layout_constraintStart_toEndOf="@+id/btn_history"
                >
                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_library_add"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/white" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:includeFontPadding="false"
                    android:text="@string/last_added"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp"
                    android:layout_marginStart="@dimen/_4sdp"
                    />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/btn_most_play"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="start|center_vertical"
                android:padding="@dimen/_8sdp"
                android:background="@drawable/bg_button_secondary"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@+id/btn_history"
                app:layout_constraintStart_toStartOf="@id/btn_history"
                app:layout_constraintEnd_toEndOf="@+id/btn_history"
                >
                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_arrow_outward"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/white" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:includeFontPadding="false"
                    android:text="@string/most_played"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp"
                    android:layout_marginStart="@dimen/_4sdp"
                    />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/btn_shuffle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="start|center_vertical"
                android:padding="@dimen/_8sdp"
                android:background="@drawable/bg_button_secondary"
                app:layout_constraintTop_toTopOf="@+id/btn_most_play"
                app:layout_constraintBottom_toBottomOf="@+id/btn_most_play"
                app:layout_constraintStart_toStartOf="@+id/btn_last_added"
                app:layout_constraintEnd_toEndOf="parent"
                >
                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_shuffle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/white" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:includeFontPadding="false"
                    android:text="@string/shuffle"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp"
                    android:layout_marginStart="@dimen/_4sdp"
                    />
            </LinearLayout>
            <TextView
                android:id="@+id/txt_label_top_artists"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:includeFontPadding="false"
                android:text="@string/top_artists"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintTop_toBottomOf="@+id/btn_shuffle"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/_14sdp"
                />
            <ImageView
                android:id="@+id/img_arrow_top_artists"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_arrow_right"
                app:layout_constraintTop_toTopOf="@+id/txt_label_top_artists"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/txt_label_top_artists"
                app:tint="@color/color_primary" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_top_artists"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"
                app:layout_constraintTop_toBottomOf="@+id/txt_label_top_artists"
                android:layout_marginTop="@dimen/_8sdp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>